<resources>
    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>
    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="app_name">Mapp</string>
    <string name="registrarse">Registarse</string>
    <string name="contra">Contraseña (mínimo 6 caracteres)</string>
    <string name="contra1">Contraseña</string>
    <string name="user1">Usuario (máximo 9 caracteres)</string>
    <string name="user">Usuario</string>
    <string name="espacio">\n\n\n</string>
    <string name="tema1">Tema  1</string>
    <string name="tema2">Tema \n2</string>
    <string name="tema3">Tema \n3</string>
    <string name="tema4">Tema \n4</string>
    <string name="tema5">Tema \n5</string>
    <string name="tema6">Tema \n6</string>
    <string name="tema7">Tema \n7</string>
    <string name="tema8">Tema \n8</string>
    <string name="tema9">Tema \n9</string>
    <string name="tema10">Tema \n10</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="insnarrado">Presiona el botón Play para iniciar la parte de la historia de Laoshi necesaria para resolver el ejercicio siguiente</string>
    <string name="registrate">Regístrate</string>
    <string name="nocuenta">¿No tienes una cuenta?</string>
    <string name="emailuser">E-mail</string>
    <string name="texto1">" Hace mucho tiempo, existía una tribu de pandas guerreros llamada Karankawuas. Ellos vivían en armonía, viajando de lugar en lugar, esperando algún día encontrar el bambú Moshu…el bambú de los dioses. Un día, el entonces líder de la tribu, Houyi un panda aventurero, inteligente y fuerte, el líder perfecto, recibió una visión en sus sueños de parte del dios del Bambú: Zhú Shén.   El aclamado dios le mostró la respuesta a la búsqueda de la tribu, la llave al bambú Moshu. Le reveló el camino hacia el cerro del Bernal, el único lugar donde se podía encontrar el Moshu. Houyi, siguiendo la visión de Zhú Shén, guío a los Karankawas hacia el lugar indicado, y como recompensa, el dios del Bambú le otorgó un regalo, una vara de bambú Moshu bendecida por el mismísimo Zhú Shén, que le otorgaría a él y a todos sus descendientes la inteligencia y fuerza de un dios.   Pasaron los años, y el pueblo de los Karankawuas había prosperado en el cerro, fundando una aldea a la que decidieron llamar Magiscatzin. Después de que Houyi murió, su hijo Aren decidió construir una fortaleza para que todos sus descendientes pudieran vivir como miembros de la realeza, una construcción digna de los portadores de la Vara Sagrada Moshu.   Cada descendiente de Houyi fue diferente, su nieto, Mukanda, fue un panda pacifista y amable con todos, y el reino prosperó mucho bajo su mandato. A diferencia de Mukanda, su hijo Lingdao era como su tatarabuelo, alguien con espíritu aventurero y valiente en extremo, fue conocido por las grandes expediciones que llevaba a cabo, en busca de recursos para la aldea y tesoros extraños. "</string>
    <string name="nivel1">Laoshi (Genesis)</string>
    <string name="ejmplolvl1">"          Ejemplo de cómo ordenarlo:               Lavarse las manos        1.INICIO.       2.-Abrir el grifo de agua.       3.-Mojarse las manos.       4.-Aplicarse jabón.       5.-Enjuagarse las manos.       6.-Cerrar el grifo de agua.       7.-Secarse la manos con papel.       8.FIN. "</string>
    <string name="ejmplolvl2">"         Ejemplo de cómo ordenarlo:                       Ir a la Escuela        1.INICIO.       2.-Levantarte temprano.       3.-Apagar la alarma.       4.-Tender la cama.       5.-Ponerse el uniforme.       6.-Desayunar.       7.-Lavarte los dientes.       8.-Salir de la casa para ir a la escuela.       9.FIN. "</string>
    <string name="ejmplolvl3">"                                 Ejemplo de cómo ordenarlo:                                         Algoritmo de Comer        1. Pongo comida en el plato.       2. Esta el plato con comida.       3. Pongo los cubiertos.       4. Tomo los cubiertos para cortar.       5. Voy seleccionando que comer primero pinchando con el tenedor.       6. Hago el movimiento para ingerir el alimento.       7. Llevo la comida a la boca.       8. Ingiero el alimento.       9. Vuelvo el cubierto a la comida.       10. Al finalizar la comida dejo los cubiertos a los lados. "</string>
    <string name="ejmplolvlvar4">" Una variable es un sitio donde  guardamos una determinada información. En función del tipo de información  que guardemos (texto, números, booleanas, etc.), la variable será de uno  u otro tipo. "</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="nivel2">Plan Malvado de los Paythonianos</string>
    <string name="nivel4">Promedio</string>
    <string name="TEMA1">Algoritmos</string>
    <string name="Nivel1Tema1">Algoritmos \n1</string>
    <string name="Nivel2Tema1">Algoritmos \n2</string>
    <string name="Nivel3Tema1">Algoritmos \n3</string>
    <string name="Nivel4Tema1">Algoritmos \n4</string>
    <string name="Nivel5Tema1">Algoritmos \n5</string>
    <string name="instruccion">Escribe el orden en los recuadros amarillos, asignando el número que le corresponde, según fueron sucediendo los hechos en la historia </string>
    <string name="instruccion2">Presiona los botones en el orden en el que fueron sucedieron los hechos en la historia.</string>
    <string name="texto2">"Un día, los hijos de Lingdao, Laoshi -de 21 años y su hermana menor Shizong de 18 estaban paseando por su lugar favorito dentro del bosque de los huizaches, a lado del río Guayalejo, cuando escucharon un ruido fuerte y extraño, fuera de lo común en un bosque tan calmado.   Al llegar al lugar de donde provenía el extraño sonido, los jóvenes pandas se sorprendieron al ver una nave espacial con marcas extrañas subiendo hacia las nubes. Asombrados por lo que vieron, se acercaron al lugar de donde había despegado la nave.   “¡Laoshi! Mira, en el suelo hay una hoja.” Shizong señalo una hoja tirada en el suelo, que contenía lo que parecía ser un tipo de lenguaje. La hoja decía lo siguiente: P=int(intput('Quantity:  '))       for i in range(P):    Print (“Kill the Karankawuas”).   -“Que curioso.”-, comentó Laoshi, examinando la hoja con cuidado- “Creo que deberíamos llevárselo a Padre. Quizá reconoce el lenguaje entre los muchos que aprendió en sus aventuras”. Y con eso dicho, ambos jóvenes regresaron a la fortaleza de Aren.   Ellos no lo sabían, pero esa nave espacial pertenecía a una raza de aliens cambiaformas del planeta Paython. Estos extraterrestres no venían en son de paz, querían conquistar al pueblo de los Karankawuas, pues los pandas poseían un valioso material- el Moshu- que tenía la capacidad de fertilizar la tierra, y esta era la única manera de que los paythonianos habían podido sobrevivir por tanto tiempo. Despúes de años de estudio de la cultura Karankawua, los paythonianos al fin habían logrado dominar el idioma Karankawua. El plan de Kin, el líder de los paythonianos, era hacerse pasar por pandas inmigrantes de Sudamérica en busca de trabajo para sobrevivir, y después de ganarse la confianza del pueblo de Magiscatzin, atacarlos para conseguir el Moshu. "</string>
    <string name="texto3">Mientras tanto, en la fortaleza de Aren, Lingdao estaba recibiendo a Kin y a algunos de su tribu- para esto, los paythonianos ya habían cambiado su forma a una de pandas.- creyéndose la historia sobre inmigrantes de Sudamérica. Para cuando Laoshi y Shizong llegaron a su casa, los Karankawuas estaban haciendo una fiesta de bienvenida para los paythonianos disfrazados.   Entre tanto alboroto, Shizong se olvido de mostrar la hoja que había encontrado en el bosque, y el incidente no paso a mayores. Los paythonianos eran pacientes, esperaron varios meses antes de llevar a cabo el ataque planeado. Durante todo ese tiempo, Kin logró cautivar la atención de Shizong, y la joven panda terminó profundamente enamorada.   Había pasado el tiempo, y todos en Magiscatzin estaban felices, los paythonianos se habían adaptado bien al trabajo, y Shizong salía con Kin. Un día, Lingdao estaba sentado tranquilo en el comedor junto con Shizong y Kin, esperando a que Laoshi llegara de entrenar en el bosque para poder tener una cena familiar; de repente, un guardia Karankawua entró al comedor ensangrentado y agitado.   “¡Hemos sido atacados! Los payth”- y no terminó de hablar, pues un paythoniano le atravesó el corazón con una espada.</string>
    <string name="nivel3">Entrada de los Paythonianos</string>
    <string name="Terminado">Terminado</string>
    <string name="Completado">!Has completado el ejercicio!</string>
    <string name="Siguiente">Siguiente</string>
    <string name="TEMA2">Variables</string>
    <string name="start">Start</string>
    <string name="Nivel1Tema2">Tipos de datos</string>
    <string name="Insnivel1tema2">" Escribe el nombre del tipo de dato al que corresponda cada dato. Utiliza los nombres de los tipos de datos que están en el recuadro superior de la pantalla.  Ejemplo: Hola Mundo(Palabra) 47(Número entero) 33.33(Número Decimal)"</string>
    <string name="Insnivel2Tema2">" Escribe el nombre del tipo de dato al que corresponda cada dato. Utiliza los nombres de los tipos de datos que están en el recuadro superior de la pantalla.  Ejemplo: Hola Mundo(str) 47(int) 33.33(float)"</string>
    <string name="Nivel2Tema2">Tipos de datos 2</string>
    <string name="Insnivel4Tema2">Organiza el algortimo para calcular la media (promedio) de 3 números</string>
    <string name="bton1lvl3">    Los paythonianos ya habían cambiado su forma a la de un panda</string>
    <string name="bton2lvl3">Los Karankawuas hacieron una fiesta de bienvenida para los paythonianos </string>
    <string name="bton3lvl3">Kin logró cautivar la atención de Shizong</string>
    <string name="bton4lvl3">Lingdao recibio a Kin   y a su tribu en la fortaleza de Aren</string>
    <string name="bton5lvl3">Un paythoniano le atravesó el corazón con una espada a un guardia karankawua</string>
    <string name="bton1lvl4">Introducir  N1, N2, N3</string>
    <string name="bton2lvl4">Inicio</string>
    <string name="bton3lvl4">Fin</string>
    <string name="bton4lvl4">Salida de Promedio</string>
    <string name="bton5lvl4">Prom=(N1+N2+N3)/3</string>
    <string name="tiempo">Tiempo:  </string>
    <string name="Check">Check</string>
    <string name="no_hay_internet">No hay Internet</string>
    <string name="stringconection2">Parece que no tienes conexión a Internet\nComprueba tu red y vuelve a intentarlo</string>
    <string name="reintentar">Reintentar</string>
</resources>