<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InternetConectionActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:id="@+id/connectionLayout">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_fileName="wifi_animation.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        />

    <TextView
        android:fontFamily="@font/ttnormspro_bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/NEGRO"
        android:id="@+id/tv_conection1"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/no_hay_internet"
        />

    <TextView
        android:fontFamily="@font/ttnormspro_medium"
        android:id="@+id/tv_conection2"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/stringconection2"
        />
    <Button
        android:background="@color/colorAZUL_MAPP"
        android:fontFamily="@font/ttnormspro_medium"
        android:id="@+id/bton_retry"
        android:textColor="@color/BLANCO"
        android:layout_marginTop="15dp"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:text="@string/reintentar"/>

</LinearLayout>